fixed logo spacing

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -350,9 +350,9 @@ body {
 
   #work-logos,
   #ga-logo,
-  #uw-,
+  #uw-logo,
   #wr-logo {
-    padding-top: 2rem;
+    padding-top: 1rem;
     padding-bottom: 3rem;
   }
 
